# nmea_navsat_driver

./: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
config/: nmea_serial_driver.yaml
launch/: nmea_serial_driver.launch.py  nmea_socket_driver.launch.py  nmea_tcpclient_driver.launch.py
nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_tcpclient_driver.py  nmea_topic_driver.py  nmea_topic_serial_reader.py
src/libnmea_navsat_driver/: driver.py  parser.py
